Fixed alignment offset

--- a/links/main.css
+++ b/links/main.css
@@ -3,7 +3,7 @@ body { font-size:11px; font-family: 'input_mono_regular'; overflow:hidden; }
 yu { display: block; }
 
 yu.screen { background:white; width: calc(100vw - 480px); height:100vh; position: relative; z-index: 900; top:50px;}
-yu.screen screen { display:block; }
+yu.screen screen { display:block; margin-top:150px; }
 yu.screen screen.character_selection { height: 100vh;width: 680px; margin:0px auto }
 yu.screen screen.character_selection yu.character { display:block; float:left; margin-top:90px; position: relative; overflow: hidden; height:500px;}
 yu.screen screen.character_selection yu.character yu.frame {  background-image: url('../media/portraits/frame.png'); background-size:contain; background-repeat:no-repeat; position: absolute;}
@@ -25,7 +25,7 @@ yu.screen screen.arena_selection ln.highlight { background:#ccc; }
 
 .arena { position:relative; margin:90px; }
 .arena .background { background-image: url(../media/arenas/background/dojo.png);width: 800px;height: 730px;display: block;background-size: contain;background-repeat: no-repeat;position: absolute;top: -245px;left: -55px }
-.arena .foreground { background-image: url(../media/arenas/foreground/dojo.png);width: 510px;height: 330px;display: block;background-size: contain;background-repeat: no-repeat;position: absolute;top: 365px;left: -53px }
+.arena .foreground { background-image: url(../media/arenas/foreground/dojo.png);width: 510px;height: 330px;display: block;background-size: contain;background-repeat: no-repeat;position: absolute;top: 340px;left: -53px }
 .arena .floor { background:#ccc; width:400px; height:400px; }
 .arena tile { display:block; width:80px; height:80px;position: absolute; font-size:10px; color:#000; text-align:center; font-family: Helvetica; }
 .arena tile .sprite { display: block;width: 80px;height: 87px;background-size: contain;background-repeat: no-repeat; }
